strings/json_lib.c
@@ -974,7 +974,12 @@ int json_scan_next(json_engine_t *j)
   int t_next;
 
   get_first_nonspace(&j->s, &t_next, &j->sav_c_len);
-  return *j->killed_ptr || json_actions[j->state][t_next](j);
+  if (*j->killed_ptr)
+  {
+    j->s.error= JE_KILLED;
+    return 1;
+  }
+  return json_actions[j->state][t_next](j);
 }
 
 
